# kemb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs-staleness.yml
backbone/: README.md  pyproject.toml
backbone/config/: doc_types.yaml
backbone/src/doc_backbone/: __init__.py  cir.py  classify.py  cli.py  corpus.py  db.py  render.py  score.py  sync.py  triage.py
backbone/src/doc_backbone/extractors/: __init__.py  base.py  native_pdf.py  registry.py
backbone/tests/: test_spine.py
docs/: ROADMAP.md  goal.txt
docs/llamacloud/: README.md  _manifest.json
docs/llamacloud/llamaparse/: index.md
docs/llamacloud/llamaparse/classify/: index.md
docs/llamacloud/llamaparse/classify/examples/: index.md
docs/llamacloud/llamaparse/classify/examples/classify_contract_types/: index.md
docs/llamacloud/llamaparse/classify/sdk/: index.md
docs/llamacloud/llamaparse/cloud-index/examples/: index.md
docs/llamacloud/llamaparse/cloud-index/getting_started/: index.md
docs/llamacloud/llamaparse/cookbooks/: index.md
docs/llamacloud/llamaparse/cookbooks/enterprise_onboarding/: index.md
docs/llamacloud/llamaparse/extract/: index.md
docs/llamacloud/llamaparse/extract/api/: index.md
docs/llamacloud/llamaparse/extract/examples/: index.md
docs/llamacloud/llamaparse/extract/sdk/: index.md
docs/llamacloud/llamaparse/extract/web_ui/: index.md
docs/llamacloud/llamaparse/general/api_key/: index.md
docs/llamacloud/llamaparse/general/billing/: index.md
docs/llamacloud/llamaparse/general/faq/: index.md
docs/llamacloud/llamaparse/general/glossary/: index.md
docs/llamacloud/llamaparse/general/limitations/: index.md
docs/llamacloud/llamaparse/general/organizations/: index.md
docs/llamacloud/llamaparse/general/pricing/: index.md
docs/llamacloud/llamaparse/general/rate_limits/: index.md
docs/llamacloud/llamaparse/general/regions/: index.md
docs/llamacloud/llamaparse/general/status/: index.md
docs/llamacloud/llamaparse/general/supported_document_types/: index.md
docs/llamacloud/llamaparse/general/troubleshooting/: index.md
docs/llamacloud/llamaparse/general/webhooks/: index.md
docs/llamacloud/llamaparse/parse/: index.md
docs/llamacloud/llamaparse/parse/examples/: index.md
docs/llamacloud/llamaparse/parse/getting_started/: index.md
docs/llamacloud/llamaparse/self_hosting/: index.md
docs/llamacloud/llamaparse/self_hosting/architecture/: index.md
docs/llamacloud/llamaparse/self_hosting/faq/: index.md
docs/llamacloud/llamaparse/self_hosting/installation/: index.md
docs/llamacloud/llamaparse/sheets/: index.md
docs/llamacloud/llamaparse/sheets/examples/: index.md
docs/llamacloud/llamaparse/split/: index.md
docs/llamacloud/llamaparse/split/examples/: index.md
docs/llamacloud/llamaparse/split/getting_started/: index.md
docs/llamacloud/reference/cli/: index.md
docs/llamacloud/reference/go/: index.md
docs/llamacloud/reference/resources/$shared/: index.md
docs/llamacloud/reference/resources/beta/: index.md
docs/llamacloud/reference/resources/classifier/: index.md
docs/llamacloud/reference/resources/classify/: index.md
docs/llamacloud/reference/resources/configurations/: index.md
docs/llamacloud/reference/resources/data_sinks/: index.md
docs/llamacloud/reference/resources/data_sources/: index.md
docs/llamacloud/reference/resources/extract/: index.md
docs/llamacloud/reference/resources/files/: index.md
docs/llamacloud/reference/resources/parsing/: index.md
docs/llamacloud/reference/resources/pipelines/: index.md
docs/llamacloud/reference/resources/projects/: index.md
docs/llamacloud/reference/resources/retrievers/: index.md
docs/llamacloud/reference/typescript/: index.md
examples/: README.md
examples/categories/: report_sections.json
examples/parse_results/: sample_agreement.parse.json
examples/rules/: document_routing.json
examples/schemas/: invoice.json
scripts/: build_benchmark_corpus.py  check_docs_staleness.py  docs_common.py  fetch_docs.py
skills/kemb/: SKILL.md
skills/kemb/references/: classify.md  extract.md  index.md  parse.md  probe.md  rest_api.md  split.md  stemma.md  troubleshooting.md
skills/kemb/scripts/: kemb_cli.py
skills/llamaclassify/: SKILL.md
skills/llamaclassify/scripts/: run_classify.py
skills/llamaextract/: SKILL.md
skills/llamaextract/scripts/: run_extract.py
skills/llamaparse/: SKILL.md
skills/llamaparse/references/: rest_api.md  troubleshooting.md
skills/llamaparse/scripts/: parse_document.py
skills/llamasplit/: SKILL.md
skills/llamasplit/scripts/: run_split.py
src/kemb/: __init__.py  _cite.py  _classify.py  _common.py  _core.py  _doctor.py  _extract.py  _index.py  _probe.py  _sample.py  _split.py  _stemma.py
src/llamaparse_cli/: __init__.py  _classify.py  _common.py  _core.py  _doctor.py  _extract.py  _inspect.py  _parse.py  _probe.py  _split.py
tests/: conftest.py  test_classify.py  test_cli_dispatch.py  test_common.py  test_doctor.py  test_dry_run.py  test_extract.py  test_facet_run.py  test_index.py  test_inspect.py  test_parse.py  test_probe.py  test_sample.py  test_shim.py  test_split.py  test_stemma.py
(+823 files in other folders)
