[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaparse-cli"
version = "0.5.0"
description = "Tiny CLI wrapper around LlamaCloud APIs (LlamaParse v2, LlamaExtract v2, LlamaClassify v2, LlamaSplit v1 beta). Single binary with subcommands: parse, extract, classify, split."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Andrew Crosley", email = "crosleya1394@gmail.com" }
]
keywords = [
    "llamaparse",
    "llamaextract",
    "llamaclassify",
    "llamasplit",
    "llamacloud",
    "pdf",
    "ocr",
    "document-parsing",
    "structured-extraction",
    "classification",
    "markdown",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
]
dependencies = [
    "llama-cloud>=2.0.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/acrosley/llamaparse-plugin"
Repository = "https://github.com/acrosley/llamaparse-plugin"

[project.scripts]
llamaparse = "llamaparse_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
