[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kemb"
version = "0.6.0"
description = "Corpus curation for agent-ready PDF libraries. Point Claude at a directory; probe, plan, then comb the corpus into a structured markdown mirror. Single-file parse and classify as facets of the kembing process, powered by LlamaCloud where needed; post-parse extraction and splitting are the consuming agent's job."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Andrew Crosley", email = "crosleya1394@gmail.com" }
]
keywords = [
    "kemb",
    "kembing",
    "corpus-curation",
    "agent-ready",
    "rag",
    "pdf",
    "ocr",
    "document-parsing",
    "classification",
    "markdown",
    "llamacloud",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
]
dependencies = [
    "llama-cloud>=2.0.0",
    "requests>=2.28",
    "pypdf>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "requests-mock>=1.11",
]

[project.urls]
Homepage = "https://github.com/acrosley/kemb"
Repository = "https://github.com/acrosley/kemb"

[project.scripts]
kemb = "kemb:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
