[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-backbone"
version = "0.1.0"
description = "Layered document-parsing backbone: turns a PDF corpus into a deterministic, living markdown mirror."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Andrew Crosley", email = "crosleya1394@gmail.com" }
]
keywords = ["pdf", "parsing", "markdown", "corpus", "ocr", "document-understanding"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
]
dependencies = [
    "pypdf>=4.0",
    "pyyaml>=6",
    "click>=8",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.scripts]
backbone = "doc_backbone.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
